[gd_scene load_steps=17 format=3 uid="uid://dyy2y347ihhrh"]

[ext_resource type="Script" path="res://Scenes/beepbox_artist_unlocked.gd" id="1_7ojkr"]
[ext_resource type="Texture2D" uid="uid://6xtftdjpp67x" path="res://Assets/Pics/Music Blocks/IMG_036.png" id="2_dgs6v"]
[ext_resource type="Texture2D" uid="uid://da12n1x8kbf8g" path="res://Assets/Pics/Music Blocks/IMG_034.png" id="3_1omgr"]
[ext_resource type="Texture2D" uid="uid://b8ki1aveesx3d" path="res://Assets/Pics/Music Blocks/IMG_035.png" id="3_mjtio"]
[ext_resource type="AudioStream" uid="uid://dyci8p0s1om1b" path="res://Assets/Audio/Sounds/bell.ogg" id="4_4wk3b"]
[ext_resource type="FontFile" uid="uid://csnu0jugbrqf6" path="res://Assets/Fonts/DIGITEK.ttf" id="5_m0jb3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_puaea"]
size = Vector2(20, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_wjjmu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dgs6v")
}],
"loop": true,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_mjtio")
}],
"loop": true,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1omgr")
}],
"loop": true,
"name": &"red",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ba2ml"]
resource_name = "fade_away"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1x85s"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wtc4s"]
_data = {
"RESET": SubResource("Animation_1x85s"),
"fade_away": SubResource("Animation_ba2ml")
}

[sub_resource type="Animation" id="Animation_5dni7"]
resource_name = "zoom_fade"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-61.5, 52), Vector2(-150, 52)]
}

[sub_resource type="Animation" id="Animation_6agt5"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_unxly"]
_data = {
"RESET": SubResource("Animation_6agt5"),
"zoom_fade": SubResource("Animation_5dni7")
}

[sub_resource type="Animation" id="Animation_ggvwd"]
resource_name = "music_jiggle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.261799, 0.0, -0.261799, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k35b7"]
_data = {
"music_jiggle": SubResource("Animation_ggvwd")
}

[node name="Beepbox Artist Unlocked" type="Area2D"]
collision_mask = 2
script = ExtResource("1_7ojkr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_puaea")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -1)
sprite_frames = SubResource("SpriteFrames_wjjmu")
animation = &"blue"

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_1omgr")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -83.0
offset_right = 130.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.784314, 1, 1)
theme_override_constants/outline_size = 3
text = "user unlocked!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Label" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.66
offset_top = 52.0
offset_right = 47.34
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0.784314, 1, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("5_m0jb3")
text = "fnanfne"
horizontal_alignment = 1

[node name="RadioSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4wk3b")
volume_db = -20.0
bus = &"Sounds"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_away"
libraries = {
"": SubResource("AnimationLibrary_wtc4s")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "zoom_fade"
libraries = {
"": SubResource("AnimationLibrary_unxly")
}

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
autoplay = "music_jiggle"
speed_scale = 2.5
libraries = {
"": SubResource("AnimationLibrary_k35b7")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
